@@ -55,6 +55,7 @@ typedef unsigned long pthread_intr_t;
 
 #define PTHREAD_SHIELD  XNSHIELD
 #define PTHREAD_WARNSW  XNTRAPSW
+#define PTHREAD_PRIMARY XNTHREAD_SPARE1
 
 #define PTHREAD_IAUTOENA    XN_ISR_ENABLE
 #define PTHREAD_IPROPAGATE  XN_ISR_CHAINED
